infra/vpc.tf
#Create VPC and two public subnets
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_hostnames = true
  enable_dns_support   = true
  instance_tenancy     = "default"

  tags = {
    Name = "app-vpc"
  }
}

resource "aws_subnet" "pub_sub_1" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.subnet_cidr_block
  availability_zone = var.avail_zone

  tags = {
    Name = "subnet_1"
  }
}

resource "aws_subnet" "pub_sub_2" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.subnet_cidr_block2
  availability_zone = var.avail_zone

  tags = {
    Name = "subnet_2"
  }
}
resource "aws_subnet" "pub_sub_3" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = var.subnet_cidr_block3
  availability_zone = var.avail_zone

  tags = {
    Name = "subnet_3"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "app-vpc-igw"
  }
}

resource "aws_route_table" "pub_rt" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "pub_rt"
  }
}

resource "aws_route_table_association" "sub_1" {
  subnet_id      = aws_subnet.pub_sub_1.id
  route_table_id = aws_route_table.pub_rt.id
}

resource "aws_route_table_association" "sub_2" {
  subnet_id      = aws_subnet.pub_sub_2.id
  route_table_id = aws_route_table.pub_rt.id
}
resource "aws_route_table_association" "sub_3" {
  subnet_id      = aws_subnet.pub_sub_3.id
  route_table_id = aws_route_table.pub_rt.id
}
